<resources>
    <string name="app_name">MobileSurveySystem</string>
    <string name="question_tag">Question</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="log_in">Log In</string>
    <string name="log_out">Log Out</string>
    <string name="scan_qr_code">Scan QR Code</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="register">Register</string>
    <string name="create_survey">Create Survey</string>
    <string name="view_surveys">View Surveys</string>
    <string name="add_new_question">Add new Question</string>
    <string name="submit_survery">Submit Survery</string>
</resources>
